--- a/composer.json
+++ b/composer.json
@@ -5,19 +5,26 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "~5.0"
+		"laravel/framework": "~5.0",
+		"laravel/elixir": "~1.0",
+		"illuminate/html": "5.0.*@dev"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "~4.0"
+		"phpunit/phpunit": "~4.0",
+		"phpspec/phpspec": "~2.1"
 	},
 	"autoload": {
 		"classmap": [
-			"resources/database",
-			"tests/TestCase.php"
+			"database"
 		],
 		"psr-4": {
 			"App\\": "app/"
 		}
+	},
+	"autoload-dev": {
+		"classmap": [
+			"tests/TestCase.php"
+		]
 	},
 	"scripts": {
 		"post-install-cmd": [
